--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@tanstack/react-query": "^5.51.23",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "react-star-ratings": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
